objects/HCS_HTS_Mapping__mdt.object
<CustomObject>
    <label>Collaboration Mapping</label>
    <pluralLabel>Collaboration Mappings</pluralLabel>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCS_Rep__c</fullName>
        <label>Opportunity Creator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTS_Rep__c</fullName>
        <label>Collaboration Rep</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAPCLR_Rep__c</fullName>
        <label>FAPCLR_Rep</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>